default/objects/Incoming_Integrated_Object__mdt/Incoming_Integrated_Object__mdt.object-meta.xml
<CustomObject>
    <description>An object to define how to set fields on incoming integrations</description>
    <label>Incoming Integrated Object</label>
    <pluralLabel>Incoming Integrated Objects</pluralLabel>
</CustomObject>