default/objects/Incoming_Integrated_Object__mdt/fields/External_Id_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Field_API_Name__c</fullName>
    <inlineHelpText>The field on the Salesforce Object where the unique Id should be matched.  This is only needed when Object is set.</inlineHelpText>
    <label>External Id Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>