default/objects/Incoming_Integrated_Object__mdt/fields/Is_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Record</label>
    <type>Checkbox</type>
</CustomField>