default/objects/Incoming_Integrated_Object__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>What is the Object coming into SF as an Incoming Integration</description>
    <inlineHelpText>What is the Object coming into SF as an Incoming Integration</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>