default/objects/Incoming_Integrated_Object__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <inlineHelpText>The Object name that has special fields to be set during integration</inlineHelpText>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>